Making a test to save achievement in file